--- a/style.css
+++ b/style.css
@@ -24,3 +24,13 @@ body {
 #header_container {
   border: 1px solid #666;
 }
+
+nav {
+  display: flex;
+  justify-content: space-around;
+}
+
+.logo {
+  color: rgb(207, 207, 207);
+  font-family: "";
+}
